--- a/views/error.html
+++ b/views/error.html
@@ -71,7 +71,7 @@
         <span class="emoji">🚫</span>
         <h1>Access Denied</h1>
         <p>You are not authorized to view this page.</p>
-        <a href="/" class="btn">Go Back</a>
+        <a href="https://aleemtdev.vercel.app/" class="btn">Go to Official Site</a>
     </div>
 </body>
 </html>
